feat(perf): Remove Spring context at API level